[package]
name = "ProjectKnifeRain"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_rapier3d = "0.30.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.1"
multiplayer-lib = { path = "../multiplayer-lib" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
